crates/quaffed/tests/snapshots/end_to_end__an_expression_that_is_not_utf8_is_refused_naming_which.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"TODO\""
    - "-e"
    - "find \"caf�\""
---
success: false
exit_code: 3
----- stdout -----

----- stderr -----
quaff: -e expression 2 "find \"caf\xE9\"" is not valid UTF-8
