crates/quaffed/tests/snapshots/end_to_end__anchors_and_other_punctuation_are_literal.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - ^x$
---
success: true
exit_code: 0
----- stdout -----
a.txt:1:1-1:3: ^x$

----- stderr -----
