crates/quaffed/tests/snapshots/end_to_end__asked_for_help_it_prints_help.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
quaff [VERSION] - the QUAntiFied File EDitor

Usage:
  quaff TEXT [PATH]        search the project for TEXT
  quaff -s TEXT [PATH]     the same, with TEXT given as an option
  quaff -e SCRIPT [PATH]   run the statements in SCRIPT
  quaff -f FILE [PATH]     run the script in FILE; -f - reads it from standard input
  quaff -h, --help         this help

-s, -e and -f may each be repeated and mixed, and run in the order given.  With any of them,
the first positional argument is PATH.  TEXT is literal: nothing in it is special.  Put --
before TEXT that starts with a dash.

A script is statements separated by newlines or ;, with # comments:

  find "TODO"                      print every match; `find` may be left out
  find "TODO" expect none          an assertion: fail, exit 2, unless the count holds
  find "def" $^ "    pass"         $^ is a line break; adjacent quoted text joins
  find ^"x"$                       ^ and $ anchor to the start and end of a line

Consecutive assertions are one block: every one is checked, each that fails is reported,
and the run stops after the block.  Counts are N, at least N, at most N, N or none, none and
any.  Nothing in quoted text is escaped: to include a ", fence the text with three or more,
as """ say "hi" """.

A search covers the whole project - the nearest directory at or above this one that holds
.git - or this directory when there is no project.  PATH narrows it to one file or directory
inside the project.  Files ignored by .gitignore, .ignore or .git/info/exclude are skipped,
and so is version-control metadata.  Hidden files are searched.

Each match prints on its own line as path:line:column-endline:endcolumn: text, with columns
counted in characters.  Binary files are not searched, and the run says how many there were.

Exit status: 0 found, or every assertion held; 1 nothing found, with no assertions; 2 an
assertion failed; 3 usage or script error; 5 a statement or construct this build does not
have; 7 I/O error.

----- stderr -----
