crates/quaffed/tests/snapshots/end_to_end__asked_for_help_it_says_nothing_is_implemented.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "--help"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
quaff [VERSION]: nothing is implemented yet
