crates/quaffed/tests/snapshots/end_to_end__binary_files_are_not_searched_and_the_run_says_so.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - TODO
    - image.bin
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
quaff: no matches for "TODO"
quaff: 1 binary file not searched
