crates/quaffed/tests/snapshots/end_to_end__each_construct_not_built_yet_exits_5_naming_it-4.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"a\"; delete `a` expect 1"
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 11: delete is not built yet
