crates/quaffed/tests/snapshots/end_to_end__each_construct_not_built_yet_exits_5_naming_it-5.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "replace string \"a\" with \"b\" expect any"
---
success: false
exit_code: 5
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 1: replace is not built yet
